fix media buttons not showing in customizer; behind wp-full-overlay

--- a/wiz-ee-wig-editor.css
+++ b/wiz-ee-wig-editor.css
@@ -8,6 +8,10 @@
     overflow: hidden;
 }
 
+.wewe-active.wp-customizer .mce-toolbar-grp {
+    z-index: 500000;
+}
+
 #wewe {
     position: fixed;
     top: 0;
